# omni-fs-mcp

./: CLAUDE.md  README.md  mise.toml  pyproject.toml
.github/workflows/: auto-release.yml  auto-tag.yml  auto-tag.yml.disabled  ci.yml  format.yml  release.yml  release.yml.disabled
examples/: demo_config.json  production_example.json  quick_start.py  simple_config.json
examples/examples/: demo_config.json
src/omni_fs_mcp/: __init__.py  backend_manager.py  dal.py  mcp_server.py
tests/: test_backend_manager.py  test_dal.py  test_mcp_server.py
