[project]
name = "omni-fs-mcp"
version = "0.1.0"
description = "Omni-FS-MCP is an MCP server that supports managing multiple types of file systems, such as local FS, S3, R2, B2, WebDAV, and others, in one MCP server. It is built on top of OpenDAL."
readme = "README.md"
authors = [{ name = "Vaayne", email = "liu.vaayne@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.11.0",
    "opendal>=0.45.20",
]

[tool.uv]
package = true

[project.scripts]
omni-fs-mcp = "omni_fs_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
